Update content and fix dark mode

--- a/css/input.css
+++ b/css/input.css
@@ -1,56 +1,4 @@
-:root {
-  --color-primary:#EDF2F7;
-  --color-secondary:#CBD5E0;
-  --color-heading:#2D3748;
-  --color-body:#1A202C;
-}
-
 @tailwind base;
-/* inter-regular - latin */
-
-@font-face {
-  font-family: 'Inter';
-  font-style: normal;
-  font-weight: 400;
-  src: url('/fonts/inter-v2-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
-       url('/fonts/inter-v2-latin-regular.woff') format('woff'), /* Modern Browsers */
-}
-
-/* inter-700 - latin */
-@font-face {
-  font-family: 'Inter';
-  font-style: normal;
-  font-weight: 700;
-  src: url('/fonts/inter-v2-latin-700.woff2') format('woff2'), /* Super Modern Browsers */
-       url('/fonts/inter-v2-latin-700.woff') format('woff'), /* Modern Browsers */
-}
-
-/* roboto-slab-regular - latin */
-@font-face {
-  font-family: 'Roboto Slab';
-  font-style: normal;
-  font-weight: 400;
-  src: url('/fonts/roboto-slab-v12-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
-       url('/fonts/roboto-slab-v12-latin-regular.woff') format('woff'), /* Modern Browsers */
-}
-
-/* roboto-slab-600 - latin */
-@font-face {
-  font-family: 'Roboto Slab';
-  font-style: normal;
-  font-weight: 600;
-  src: url('/fonts/roboto-slab-v12-latin-600.woff2') format('woff2'), /* Super Modern Browsers */
-       url('/fonts/roboto-slab-v12-latin-600.woff') format('woff'), /* Modern Browsers */
-}
-
-/* roboto-slab-700 - latin */
-@font-face {
-  font-family: 'Roboto Slab';
-  font-style: normal;
-  font-weight: 700;
-  src: url('/fonts/roboto-slab-v12-latin-700.woff2') format('woff2'), /* Super Modern Browsers */
-       url('/fonts/roboto-slab-v12-latin-700.woff') format('woff'), /* Modern Browsers */
-}
 
 @font-face {
   font-family: 'icomoon';
@@ -92,19 +40,11 @@
   content: "\eaca";
 }
 
-
-.menu-link {
-  @apply font-semibold text-xl text-heading m-2 p-2 no-underline;
-}
-.menu-link:hover {
-  @apply text-blue-500;
-}
-
 .footer-icon {
-  @apply text-4xl text-gray-700 dark:text-gray-200 px-1 mx-3 no-underline;
+  @apply text-3xl text-gray-600 dark:text-gray-200 px-1 mx-3;
 }
 .footer-icon:hover {
-  @apply text-blue-500;
+  @apply text-blue-600 dark:text-blue-500;
 }
 
 .badges ul {
@@ -134,6 +74,39 @@
 .resume .interests a {
   @apply text-blue-600 dark:text-blue-500 hover:underline;
 }
+
+article h1 {
+  @apply text-3xl font-bold mt-6;
+}
+
+article h2 {
+  @apply text-2xl font-bold mt-6;
+}
+
+article h3 {
+  @apply text-xl font-bold;
+}
+
+article p {
+  @apply mb-3;
+}
+
+article p a {
+  @apply font-medium text-blue-600 dark:text-blue-500 underline hover:no-underline;
+}
+
+article hr {
+  @apply my-8 h-px border-0 bg-gray-200 dark:bg-gray-700;
+}
+
+article ul {
+  @apply space-y-1 list-disc list-inside text-gray-700 dark:text-gray-300;
+}
+
+article ol {
+  @apply space-y-1 list-decimal list-inside text-gray-700 dark:text-gray-300;
+}
+
 
 @tailwind components;
 @tailwind utilities;
